gpl-release folder now contains the code with updated headers and attributions to the original authors while providing updated contacts

--- a/gpl-release/Docs/README
+++ b/gpl-release/Docs/README
@@ -93,4 +93,4 @@ bottom of the docs, check to make sure that there is a '.CE' ending
 the last section of text, and that there is a newline after it.
 
 adam bryant
-adb@cs.bu.edu
+vejeta@gmail.com or https://github.com/vejeta/conquerv5/issues
