--- a/gpl-release/README
+++ b/gpl-release/README
@@ -43,4 +43,4 @@ any programming for conquer.  I have a copy of the cextract program
 available if you needed, just send me email.
 
 adam bryant
-adb@cs.bu.edu
+vejeta@gmail.com or https://github.com/vejeta/conquerv5/issues
